--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,13 +39,20 @@ jobs:
       env:
         CI: false
 
+    - name: Build and Export
+      run: |
+        npm run build
+        npx next export
+      env:
+        CI: false
+
     - name: FTP Deploy
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: dist/public/
+        local-dir: out/
         server-dir: /public_html/
         exclude: |
           **/.git*
